--- a/ungleich_page/static/ungleich_page/css/ungleich.css
+++ b/ungleich_page/static/ungleich_page/css/ungleich.css
@@ -235,9 +235,13 @@
 
     .header_slider .carousel-indicators li {
         margin: 1px 7px;
+        width: 16px;
+        height: 16px;
     }
     .header_slider .carousel-indicators li.active {
         margin: 0 7px;
+        width: 18px;
+        height: 18px;
     }
 }
 
